--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.11",
+    "vue-router": "^3.0.2",
     "vuetify": "^1.3.12"
   },
   "browserslist": [
