--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.3.12"
+    "vuetify": "^1.3.12",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
